resources/traffic-management/virtual-service-reviews-fault-abort.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 100
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 500
