resources/traffic-management/virtual-service-reviews-fault-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
      weight: 100
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 7s
